--- a/ProWayTests/ProWayTests.csproj
+++ b/ProWayTests/ProWayTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.10" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.10" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
 		<PackageReference Include="NSubstitute" Version="4.4.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
 		<PackageReference Include="xunit" Version="2.4.2" />
@@ -23,7 +26,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Proway.Projeto00.API\Proway.Projeto00.API.csproj" />
 	  <ProjectReference Include="..\Service\Service.csproj" />
 	</ItemGroup>
-
+	
 </Project>
