--- a/Proway.Projeto00.Api/Properties/launchSettings.json
+++ b/Proway.Projeto00.Api/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:14457",
-      "sslPort": 44320
+      "applicationUrl": "http://localhost:17483",
+      "sslPort": 44325
     }
   },
   "profiles": {
-    "Proway.Projeto00.Api": {
+    "Proway.Projeto00.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7062;http://localhost:5062",
+      "applicationUrl": "https://localhost:7076;http://localhost:5076",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
