--- a/Proway.Projeto00.Api/Properties/launchSettings.json
+++ b/Proway.Projeto00.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Proway.Projeto00.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7076;http://localhost:5076",
       "environmentVariables": {
