--- a/Proway.Projeto00/Proway.Projeto00.csproj
+++ b/Proway.Projeto00/Proway.Projeto00.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\" />
+  </ItemGroup>
+
 </Project>
