--- a/Proway.Projeto00/appsettings.json
+++ b/Proway.Projeto00/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Moc\\Desktop\\Proway.Projeto00\\Proway.Projeto00\\Database\\BancoDados.mdf;Integrated Security=True"
+  }
 }
